去除事故单回复页面的滚动条

--- a/modules/20_incident_icm/app/views/icm/incident_journals/_new_form.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_journals/_new_form.html.erb
@@ -395,7 +395,7 @@
                <% end %>
              </ul>
           </div>
-          <div class="mx-tab-content">
+          <div class="mx-tab-content" style="overflow: hidden;">
             <div class="mx-tab-pane active" id="tab1">
               <%= content_for :incident_request_journals %>
             </div>
