--- a/modules/30_knowledge_skm/app/views/skm/file_managements/_new_form.html.erb
+++ b/modules/30_knowledge_skm/app/views/skm/file_managements/_new_form.html.erb
@@ -1,71 +1,65 @@
 <%= app_title %>
-<%= form_tag({ :action=>"create"}, :id =>"file_form", :name => "file_form", :multipart => true) do %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_skm_file_new)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_to t(:save), {},{:href => "javascript:void(0);", :onclick => "save()"} %></div>
-            <div class="button"><%= link_to t(:save_and_update_new), {}, {:href => "javascript:void(0);", :onclick => "save_and_new()"}%></div>
-            <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="pbBody">
-    <%= flash_notice %>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-          </span><span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-        </span>
-      </span>
-      <h3><%= t(:label_common_info) %></h3>
+<%= form_tag({ :action=>"create"}, :id =>"file_form", :name => "file_form", :multipart => true,:builder => CustomFormBuilder) do %>
+    <% content_for :form_block_common   do%>
+        <table class="form-table">
+          <tbody>
+          <tr>
+            <td class="label-col"><label><%=(t :label_skm_file)%></label></td>
+            <td class="data-2col"><%=file_field_tag "file[0][file]", :required=>true%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_skm_file_category)%></label></td>
+            <td class="data-2col"><%=select_tag "file[0][file_category]", options_for_select(available_file_categories)%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :description)%></label></td>
+            <td class="data-2col"><%=text_area_tag "file[0][description]", "", {:rows => 3, :cols => 35}%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_skm_file_private_tag)%></label></td>
+            <td class="data-2col"><%=check_box_tag "file[0][private_flag]"%></td>
+          </tr>
+          </tbody>
+        </table>
+    <% end %>
+    <% content_for :form_buttons  do %>
+      <%= link_to t(:save), {},{:href => "javascript:void(0);", :onclick => "save()",:class=>"btn btn-primary"} %>
+      <%= link_to t(:save_and_update_new), {}, {:href => "javascript:void(0);", :onclick => "save_and_new()",:class=>"btn"}%>
+      <%= link_to t(:cancel), {:action => "index"},:class=>"btn cancel"%>
+    <% end %>
+
+    <!--页面结构-->
+    <div class="page-block">
+      <table class="page-block-header"><tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%=t(:label_skm_file_new)%></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr></table>
+      <%= flash_notice %>
+      <div class="page-block-body">
+        <div class="sub-page-block">
+          <div class="sub-page-block-header">
+            <%= form_require_info %>
+            <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_common   %>
+          </div>
+        </div>
+      </div>
+      <table class="page-block-footer"><tr>
+        <td class="page-block-title">
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr></table>
     </div>
-    <div class="pbSubsection"> 
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_skm_file)%></label></td>
-              <td class="data2Col"><%=file_field_tag "file[0][file]", :required=>true%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_skm_file_category)%></label></td>
-              <td class="data2Col"><%=select_tag "file[0][file_category]", options_for_select(available_file_categories)%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :description)%></label></td>
-              <td class="data2Col"><%=text_area_tag "file[0][description]", "", {:rows => 3, :cols => 35}%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_skm_file_private_tag)%></label></td>
-              <td class="data2Col"><%=check_box_tag "file[0][private_flag]"%></td>
-            </tr>         
-        </tbody>
-      </table>
-    </div>
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= link_to t(:save), {},{:href => "javascript:void(0);", :onclick => "save()"} %></div>
-            <div class="button"><%= link_to t(:save_and_update_new), {}, {:href => "javascript:void(0);", :onclick => "save_and_new()"}%></div>
-            <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
+<% end %>
+
 <script type="text/javascript">
   function save(){
     document.file_form.action = "create";
@@ -77,5 +71,5 @@
     document.file_form.submit();
   }
 </script>    
-<% end %>
+
 
