--- a/modules/30_knowledge_skm/app/views/skm/file_managements/get_data.html.erb
+++ b/modules/30_knowledge_skm/app/views/skm/file_managements/get_data.html.erb
@@ -1,68 +1,13 @@
-<!--  irm datatable      -->
- <div class="irm-datatable">
-   <div>
-       <table count="<%=@count%>">
-         <thead>
-           <tr>
-             <th style="width:75px;">
-               <div><%= t(:operation) %></div>
-             </th>
-             <th style="width:300px;">
-               <div><%= t(:label_skm_file_name) %></div>
-             </th>
-             <th style="width:60px;">
-               <div><%= t(:label_skm_file_category) %></div>
-             </th>
-             <th>
-               <div><%= t(:description) %></div>
-             </th>
-             <th style="width:100px;">
-               <div><%= t(:label_skm_file_size) %></div>
-             </th>
-             <th style="width:130px;">
-               <div><%= t(:label_skm_file_data_updated_at) %></div>
-             </th>
-
-           </tr>
-         </thead>
-         <tbody>
-         <% @datas.each do |data| %>
-         <tr id="<%=data[:id]%>">
-           <td>
-             <div>
-               <%= link_to(t(:edit),{:controller => "skm/file_managements", :action => "edit", :id => data[:id]}) %>&nbsp;
-               <%= link_to(t(:remove),{:controller => "skm/file_managements", :action=>"destroy",:id=> data[:id]},:confirm => t(:label_are_you_sure)) %>
-             </div>
-           </td>
-           <td>
-             <div>
-               <%= link_to(data[:data_file_name],{:controller => "skm/file_managements", :action => "show",:id=>data[:id], :version_id => data[:version_id],:data_file_name=>data[:data_file_name]}) %>
-             </div>
-           </td>
-           <td>
-             <div>
-               <%= data[:category_name]%>
-             </div>
-           </td>
-           <td>
-             <div>
-               <%=data[:description]%>
-             </div>
-           </td>
-           <td>
-             <div>
-               <%=data[:data_file_size]%>
-             </div>
-           </td>
-           <td>
-             <div>
-               <%=format_date(data[:data_updated_at])%>
-             </div>
-           </td>
-         </tr>
-         <% end -%>
-         </tbody>
-       </table>
-   </div>
- </div>
-<!--  end irm datatable      -->
+<%=datatable_view({:count=>@count,:datas=>@datas}) do |builder|%>
+    <% builder.column(:id,{:title=>t(:operation), :width => "80px"}) do |data|%>
+      <%= link_to(t(:edit),{:controller => "skm/file_managements", :action => "edit", :id => data[:id]}) %>&nbsp;
+      <%= link_to(t(:remove),{:controller => "skm/file_managements", :action=>"destroy",:id=> data[:id]},:confirm => t(:label_are_you_sure)) %>
+    <% end %>
+    <% builder.column(:data_file_name,{:title=>t(:label_skm_file_name),:searchable => true,:width=>"300px"}) do |data| %>
+      <%= link_to(data[:data_file_name],{:controller => "skm/file_managements", :action => "show",:id=>data[:id], :version_id => data[:version_id],:data_file_name=> data[:data_file_name]}) %>
+    <% end %>
+    <% builder.column(:category_name,{:title=>t(:label_skm_file_category), :width => "60px"})%>
+    <% builder.column(:description,{:title=>t(:description),:searchable => true})%>
+    <% builder.column(:data_file_size,{:title=>t(:label_skm_file_size), :width => "100px"})%>
+    <% builder.column(:data_updated_at,{:title=>t(:label_skm_file_data_updated_at),:width=>"130px"})%>
+<% end %>
