--- a/modules/10_ironmine_irm/app/views/irm/common/forgot_password.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/common/forgot_password.html.erb
@@ -8,23 +8,23 @@
             <div class="bottom">
             <div id="forgotpasswordbox">
               <div class="forgotbox">
-                <form name="forgotPassword">
+                <%= form_tag({:action=> "send_email"},{:id=>"forgetPassword",:name=>"forgotPassword"}) do %>
                   <p>请记住，您的用户名是电子邮件地址的形式 (username@company.com)，并且密码区分大小写。 重试登录。</p>
                   <p>如果仍无法登录，请在下面重置密码。</p>
                   <h1>重置密码</h1>
                   <table cellpadding="0" border="0"><tbody><tr><td>
-                        <div class="inputbox">
-                            <label for="name">用户名</label>
+                        <div class="inputbox" style="padding-top: 20px;">
+                            <label for="name">电子邮箱</label>
                             <span class="inputcontainer" style="padding: 0;">
-                              <input type="text" class="std" tabindex="1" value="" name="un" id="un"/>
+                              <input type="email" class="std" tabindex="1" placeholder="username@company.com"  name="email" id="email"/>
                             </span>
                             <div class="grow-button-container">
-                                <a tabindex="2" href="javascript:document.forgotPassword.submit();" class="btn btn-primary">继续</a>
+                                <a tabindex="2" type="submit" class="btn btn-primary">确定</a>
                             </div><!-- .grow_button_container -->
                         </div><!-- .inputbox -->
                         </td></tr></tbody>
                   </table>
-                </form>
+                <% end -%>
               </div>
             </div>
             <span id="forgotpasswordboxbottom"><!-- bottom --></span></div>
