--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/login/login.css.less
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/login/login.css.less
@@ -68,10 +68,11 @@
     color:#666666;
     float:left;
     font-size:12px;
+    font-weight: bold;
     height:1.333em;
     line-height:14px;
     padding-right:5px;
-    padding-top:6px;
+    padding-top:5px;
     text-align:right;
 }
 
@@ -82,7 +83,7 @@
     padding:4px 0 0;
     width:300px;
 }
-#forgotpasswordbox div.inputbox span input {height:22px;margin:0;width:280px;}
+#forgotpasswordbox div.inputbox span input {height:auto;margin:0;width:280px;}
 #forgotpasswordbox .grow-button-container {float:left;}
 #forgotpasswordbox a.grow-button {
     color:#FFFFFF;
