添加找回密码中不合法的email进行提示

--- a/modules/10_ironmine_irm/app/views/irm/common/reset_pwd.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/common/reset_pwd.html.erb
@@ -17,7 +17,7 @@
                   <% if notice %>
                     <%= notice %>
                   <% else %>
-                    <strong><%= @person.name %>你好!</strong> 请在下面完成你的密码修改！
+                    <strong><%= @person.name %>你好!</strong> 请在下面填写你的新密码！
                   <% end %>
                 </div>
                 <table class="form-table">
