--- a/modules/10_ironmine_irm/app/views/irm/profiles/_edit_form.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/profiles/_edit_form.html.erb
@@ -110,7 +110,7 @@
     </table>
     <%= error_for @profile %>
     <div class="page-block-body">
-      <div class="sub-page-block">
+      <div class="sub-page-block" id="selectableFunctions">
         <!-- 一般信息 -->
         <div class="sub-page-block-header">
           <%= form_require_info %>
