--- a/modules/10_ironmine_irm/app/views/irm/reports/_custom_report_params.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/reports/_custom_report_params.html.erb
@@ -1,22 +1,22 @@
-<table class="form-table" id="baseFilter">
+<table class="form-table" id="baseFilter" style="width: auto;">
   <tbody>
     <tr>
       <% param_criterions.each do |param_criterion| %>
           <% next unless param_criterion.field_id.present? %>
-          <td >
+          <td>
             <label for="<%=param_criterion.id %>_label"><b><%= param_criterion[:name] %></b>[<%= param_criterion[:operator_meaning] %>]</label>
-            <div style="white-space:nowrap" class="form-inline">
+            <div style="white-space:nowrap;" class="form-inline params-div">
               <% if param_criterion[:relation_bo_id].present? %>
                 <%= lov_field_tag("program_params[#{param_criterion.field_id}]",param_criterion[:relation_bo_id],{:id_type=>true,:id=>param_criterion.id,:value_field=>param_criterion[:relation_object_attribute_name],:value=>program_params["#{param_criterion.field_id}"]}) %>
               <% else %>
-                <%= text_field_tag("program_params[#{param_criterion.field_id}]",program_params["#{param_criterion.field_id}"],:id=>"#{param_criterion.id}_label")  %>
+                <%= text_field_tag("program_params[#{param_criterion.field_id}]",program_params["#{param_criterion.field_id}"],{:id=>"#{param_criterion.id}_label"})  %>
               <% end %>
             </div>
           </td>
       <% end %>
       <td>
         <fieldset>
-          <legend class="btn disabled">
+          <legend class="btn">
             <%= t(:label_irm_report_time_range) %>
           </legend>
           <table>
@@ -42,3 +42,17 @@
     </tr>
   </tbody>
 </table>
+<script type="text/javascript">
+  $(function(){
+      var tdNum = $("#baseFilter").find("tr")[0].cells.length;
+      if(tdNum > 5) {
+          var width = $(window).width();
+          $("#baseFilter").find('fieldset').css("width", (width/tdNum - 50) + "px");
+          $("#baseFilter .params-div").each(function(){
+              $(this).css("width", (width/tdNum - 30) + "px");
+              $(this).find("input").css("width",  (width/tdNum -60) + "px")
+          });
+      }
+
+  });
+</script>
