添加报表参数宽度自适应浏览器窗口宽度

--- a/modules/10_ironmine_irm/app/views/irm/reports/_custom_report_params.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/reports/_custom_report_params.html.erb
@@ -45,7 +45,7 @@
 <script type="text/javascript">
   $(function(){
       var tdNum = $("#baseFilter").find("tr")[0].cells.length;
-      if(tdNum > 5) {
+      if(tdNum >= 5) {
           var width = $(window).width();
           $("#baseFilter").find('fieldset').css("width", (width/tdNum - 50) + "px");
           $("#baseFilter .params-div").each(function(){
