--- a/modules/10_ironmine_irm/app/views/irm/common/_login_page_logo.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/common/_login_page_logo.html.erb
@@ -1,7 +1,7 @@
 <a id="main-logo"></a>
 <style type="text/css">
 #main-logo {
-background:url('<%= Irm::SystemParametersManager.login_page_logo%>') no-repeat scroll left top transparent;
+    background:url('<%= Irm::SystemParametersManager.login_page_logo%>') no-repeat scroll left top transparent;
     display:block;
     height:124px;
     margin:4px 0 0 16px;
@@ -9,5 +9,8 @@ background:url('<%= Irm::SystemParametersManager.login_page_logo%>') no-repeat s
     position:absolute;
     width:300px;
     z-index:10;
+    /*运用滤镜解决IE6下png不透明*/
+    _filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='<%= Irm::SystemParametersManager.login_page_logo%>');
+    _background: none;
 }
 </style>
