--- a/modules/10_ironmine_irm/app/views/irm/reports/_edit_step_5.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/reports/_edit_step_5.html.erb
@@ -66,16 +66,14 @@
           <td class="data-3col" colspan="3">
             <table class="filter-table">
                 <thead>
-                  <tr>
+                  <tr id="filter<%=sub_f.object.seq_num%>">
                     <td class="num-col"></td>
                     <td class="field-col"><%=t(:irm_filter_criterions_column_code)%></td>
+                    <td class="operator-col">
+                      <%=t(:irm_filter_criterions_operator_code)%>
+                    </td>
                     <td class="value-col">
-                      <table style="width: 100%;">
-                        <tr>
-                          <td class="filter-operator-cell"><%=t(:irm_filter_criterions_operator_code)%></td>
-                          <td class="filter-value-cell"><%=t(:irm_filter_criterions_filter_value)%></td>
-                        </tr>
-                      </table>
+                      <%=t(:irm_filter_criterions_filter_value)%>
                     </td>
                   </tr>
                 </thead>
@@ -87,18 +85,16 @@
                         <%=sub_f.hidden_field(:seq_num)%>
                         <%=sub_f.blank_select(:field_id,grouped_options_for_select(selectable_fields,sub_f.object.field_id),{},{:class=>"filterColumnSelect",:ref=>sub_f.object.seq_num})%>
                       </td>
-                      <td class="value-col filterOperationValue" id="filter<%=sub_f.object.seq_num%>">
                         <%= render_report_filter_field(sub_f.object.field_id,sub_f)  %>
-                      </td>
                     </tr>
                 <%end %>
                 <tr>
                   <td class="num-col"></td>
-                  <td class="text-col" colspan="2"><%=(t :label_irm_view_filter_view_condition_clause)%></td>
+                  <td class="text-col" colspan="3"><%=(t :label_irm_view_filter_view_condition_clause)%></td>
                 </tr>
                 <tr>
                   <td class="num-col"></td>
-                  <td class="text-col" colspan="2"><%=f.text_field :raw_condition_clause, :size=>60,:id=>"rawConditionClause"%></td>
+                  <td class="text-col" colspan="3"><%=f.text_field :raw_condition_clause, :size=>60,:id=>"rawConditionClause",:style=>"width:100%;"%></td>
                 </tr>
                 </tbody>
               </table>
@@ -173,9 +169,19 @@
           var url = decodeURIComponent(con.attr("href"));
           url = url.replace("{seq_num}",seq_num);
           url = url.replace("{field_id}",attribute_id);
-          refreshNode.load(url);
-
+          var placeholderTr = refreshNode.parent().find("tr.placehoder:first");
+          if (placeholderTr.length < 1) {
+              placeholderTr = refreshNode.parent().append("<tr class='placehoder'></tr>")
+              placeholderTr = placeholderTr.find("tr.placehoder:first");
+          }
+          placeholderTr.load(url, function () {
+              refreshNode.find("td.operator-col:first").after(placeholderTr.find("td.operator-col:first"));
+              refreshNode.find("td.operator-col:first").remove();
+              refreshNode.find("td.value-col:first").after(placeholderTr.find("td.value-col:first"));
+              refreshNode.find("td.value-col:first").remove();
+          });
       };
+
       $("#filterContent .filterColumnSelect").live("change",function(event){
           rawConditionClause("rawConditionClause",event);
           refreshFilter("filterContent",event);
