--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/framework.css.less
@@ -827,11 +827,12 @@ body .nav-tab-bar .nav-tab {
     border-right: 1px solid #EAEAEA;
     margin-bottom: 10px;
 }
+
 .page-block .page-block {
-   margin-bottom: 0;
-   border-left: 0;
-   border-right: 0;
-   border-bottom: 0;
+    margin-bottom: 0;
+    border-left: 0;
+    border-right: 0;
+    border-bottom: 0;
 }
 
 .page-block .page-block-header {
@@ -1110,6 +1111,7 @@ div.min-block-body {
     text-decoration: underline;
     color: inherit;
 }
+
 .datatable table th.sortable {
     cursor: pointer;
 }
@@ -1199,16 +1201,18 @@ div.min-block-body {
     text-align: left;
 }
 
-.datatable table tr.no-data div{
+.datatable table tr.no-data div {
     text-align: left;
 }
-.table-placeholder{
+
+.table-placeholder {
     min-height: 55px;
 }
 
-.datatable-scroll .table-body>table{
+.datatable-scroll .table-body>table {
     margin-top: -24px;
 }
+
 //.datatable-scroll .table-body table thead tr{
 //    height: 0px;
 //    line-height: 0px;
@@ -1222,26 +1226,23 @@ div.min-block-body {
 //        }
 //}
 
-
-.scrollx .table-header,.scrollxy .table-header{
-    overflow-x:hidden;
+.scrollx .table-header, .scrollxy .table-header {
+    overflow-x: hidden;
 }
 
-
-.scrolly .table-body,.scrollxy .table-body{
+.scrolly .table-body, .scrollxy .table-body {
     overflow-y: auto;
 }
 
-.scrollx .table-body,.scrollxy .table-body{
+.scrollx .table-body, .scrollxy .table-body {
     overflow-x: auto;
 }
 
-
-.scrolly .table-body{
+.scrolly .table-body {
     width: 100%;
 }
 
-.datatable-scroll .scroll-header{
+.datatable-scroll .scroll-header {
     border-color: #EDF5FF;
     border-width: 0;
 }
@@ -1485,7 +1486,7 @@ table.form-table td.data-4col {
     vertical-align: top;
 }
 
-table.form-table  td.button-col{
+table.form-table  td.button-col {
     text-align: center;
     width: 100%;
 }
@@ -1518,9 +1519,9 @@ table.form-table  td.button-col{
     position: absolute;
     top: 1px;
     width: 3px;
-} 
+}
 
-.date-field  input.date-input{
+.date-field  input.date-input {
     width: 80px;
 }
 
@@ -1823,54 +1824,42 @@ table.filter-table {
     td {
         vertical-align: top;
     }
-}
+    .num-col {
+        text-align: right;
+        padding: 2px 10px 2px 2px;
+    }
+    .field-col {
+        text-align: left;
+        padding: 2px 2px 2px 10px;
+    }
+    .operator-col {
+        text-align: left;
+        padding: 2px 2px 2px 10px;
+        word-wrap: break-word;
+    }
+    .value-col {
+        text-align: left;
+    }
+    .text-col {
+        text-align: left;
+        padding: 2px 2px 2px 10px;
+    }
 
-table.filter-table .num-col {
-    text-align: right;
-    padding: 2px 10px 2px 2px;
-}
-
-table.filter-table .field-col {
-    text-align: left;
-    padding: 2px 2px 2px 10px;
-}
-
-table.filter-table .value-col {
-    text-align: left;
-    padding: 2px 2px 2px 10px;
-    word-wrap: break-word;
-}
-
-table.filter-table .text-col {
-    text-align: left;
-    padding: 2px 2px 2px 10px;
-}
-
-table.filter-table .filter-operator {
-    display: inline;
-    width: 30%;
-    vertical-align: top;
     select {
         min-width: 150px;
     }
-}
+    .filter-operator-cell {
+        min-width: 150px;
+        text-align: left;
 
-table.filter-table .filter-value {
-    display: inline;
-    padding-left: 10px;
-    width: 70%;
-    vertical-align: top;
-}
-
-table.filter-table .filter-operator-cell {
-    min-width: 150px;
-    text-align: left;
-
-}
-
-table.filter-table .filter-value-cell {
-    min-width: 210px;
-    text-align: left;
+    }
+    .filter-value-cell {
+        min-width: 210px;
+        text-align: left;
+    }
+    tr.placeholder {
+        display: none;
+    }
 }
 
 //===== side and content table =====================
@@ -1886,6 +1875,7 @@ table.split-table {
     }
 
 }
+
 //===== field and legend =====================
 .form-table fieldset {
     border: 1px solid #dddddd;
@@ -1897,16 +1887,17 @@ table.split-table {
     padding: 5px 20px;
     margin: 5px;
 }
+
 fieldset legend {
     font-size: 12px;
     line-height: 20px;
     width: auto;
-    padding:1px 10px;
-    border:1px solid #dddddd;
+    padding: 1px 10px;
+    border: 1px solid #dddddd;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    text-align: left!important;
+    text-align: left !important;
 }
 
 //=============home index page====================
@@ -1969,6 +1960,7 @@ fieldset legend {
     float: left;
     margin-right: 5px;
 }
+
 .current-layout .cc {
     float: left;
 }
@@ -2000,24 +1992,28 @@ fieldset legend {
     border-color: gray;
     min-height: 20px;
 }
-.current-layout .portlet-12{
-    width:47%;
+
+.current-layout .portlet-12 {
+    width: 47%;
 }
-.current-layout .last{
-    float:right;
+
+.current-layout .last {
+    float: right;
 }
 
 //======digg button======
-.digg-zone{
+.digg-zone {
     text-align: center;
 }
+
 .digg-btn {
-    font-family: 'lucida grande',tahoma,verdana,arial,sans-serif;
+    font-family: 'lucida grande', tahoma, verdana, arial, sans-serif;
     position: relative;
     text-align: center;
     width: 60px;
     display: inline-block;
 }
+
 .digg-btn .digg-count {
     background-color: #FFFFFF;
     border-color: #E4E682 #E4E682 #E4E682;
@@ -2031,10 +2027,11 @@ fieldset legend {
     line-height: 22px;
     overflow: hidden;
 }
+
 .digg-btn .digg-action {
     background-color: #FDFFB0;
     border-color: #E4E682 #E4E682 #E4E682 #E4E682;
-    border-style: solid solid  solid solid;
+    border-style: solid solid solid solid;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     border-width: 1px 1px;
@@ -2044,7 +2041,8 @@ fieldset legend {
     line-height: 22px;
     overflow: hidden;
 }
-.digg-text{
+
+.digg-text {
     font-weight: bold;
 }
 
