解决系统页面在IE6下的支持

--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/application-ie6.css
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/application-ie6.css
@@ -8,3 +8,12 @@
  *= require plugins/treeview.ie6
   *= require browser/ie6
 */
+/*修正IE6 下img 标签中的png不透明*/
+.png-transparent {
+    azimuth: expression(
+        this.pngSet?this.pngSet=true:(this.nodeName == "IMG" && this.src.toLowerCase().indexOf('.png')>-1?(this.runtimeStyle.backgroundImage = "none",
+        this.runtimeStyle.filter = "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='" + this.src + "', sizingMethod='image')",
+        this.src = "/images/s.gif"):(this.origBg = this.origBg? this.origBg :this.currentStyle.backgroundImage.toString().replace('url("','').replace('")',''),
+        this.runtimeStyle.filter = "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='" + this.origBg + "', sizingMethod='crop')",
+        this.runtimeStyle.backgroundImage = "none")),this.pngSet=true);
+}
