--- a/modules/10_ironmine_irm/app/views/irm/common/_app_top_logo.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/common/_app_top_logo.html.erb
@@ -1,1 +1,1 @@
-<%= image_tag Irm::SystemParametersManager.app_top_logo, :style => "width: 175px; height:65px;" %>
+<%= image_tag Irm::SystemParametersManager.app_top_logo,:class => "png-transparent", :style => "width: 175px; height:65px;" %>
