--- a/modules/10_ironmine_irm/app/views/irm/common/send_email.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/common/send_email.html.erb
@@ -1,5 +1,8 @@
-<% require_jscss(:login) %>
-<% require_jscss(:login_ie6) if ie6? %>
+<% if ie6?  %>
+    <% require_jscss(:login_ie6) %>
+<% else %>
+    <% require_jscss(:login) %>
+<% end %>
 <body id="loginpage">
 <div id="pagewrap">
   <div id="newheader">
