--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/bootstrap/bootstrap-override.less
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/bootstrap/bootstrap-override.less
@@ -79,4 +79,36 @@ input, textarea, select, .uneditable-input {
     padding-bottom: 4px;
     padding-top: 4px;
 }
+.modal-backdrop {
+    *position: absolute;
+    *background-color: rgb(0, 0, 0);
+    *opacity: 0.3;
+    top:0;
+    *width: 1400px;
+    *height: 500px;
+}
+
+/* Modal */
+.modal {
+    *overflow: hidden;
+    *position:absolute;
+    *opacity: 1.0;
+    *filter: alpha(opacity=100);
+    form {
+        margin: 0;
+    }
+}
+
+.modal-backdrop {
+    *position: absolute;
+    *overflow: hidden;
+    *opacity: 0.3;
+    top:0;
+    *width: 100%;
+    *height: 800px;
+}
+
+.open .dropdown-menu {
+    display:block;
+}
 
