--- a/modules/80_bootstrap_bsp/app/views/layouts/_head.html.erb
+++ b/modules/80_bootstrap_bsp/app/views/layouts/_head.html.erb
@@ -13,6 +13,10 @@
     <%=yield :page_source%>
 <% end %>
 
+<!--[if IE 6]>
+<%= stylesheet_link_tag "ie6" %>
+<%= javascript_include_tag "ie6" %>
+<![endif]-->
 
 <%= csrf_meta_tag %>
 
