解决系统页面在IE6下的支持

--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/application-ie6.css
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/application-ie6.css
@@ -6,7 +6,8 @@
  *= require bootstrap/bootstrap-ie6
  *= require framework/framework
  *= require plugins/treeview.ie6
-  *= require browser/ie6
+ *= require browser/ie6
+ *= require ie6
 */
 /*修正IE6 下img 标签中的png不透明*/
 .png-transparent {
