修复application men bug

--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/framework.css.less
@@ -92,6 +92,9 @@ body#body {
         background: url(@pageHeaderRightButtomPath) no-repeat scroll right bottom transparent;
         text-align: right;
         white-space: nowrap;
+        ul{
+            padding-left: 0;
+        }
         .nav-pills > li > a {
             border-radius: 5px 5px 5px 5px;
             margin-bottom: 2px;
@@ -774,8 +777,8 @@ body .nav-tab-bar .nav-tab {
     color: #000000;
     display: block;
     font-family: 'Verdana', 'Geneva', sans-serif;
-    font-size: 80%;
-    font-weight: bold;
+    font-size: 100%;
+    font-weight: normal;
     padding: 0 6px;
     text-decoration: none;
 }
