修复在IE6 下设置float属性换行

--- a/modules/10_ironmine_irm/app/views/irm/watchers/_add_watcher.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/watchers/_add_watcher.html.erb
@@ -36,8 +36,7 @@
     });
   });
 
-  function delete_w(id)
-  {
-        $("#w_" + id).remove();
+  function delete_w(id){
+    $("#w_" + id).remove();
   }
 </script>
