--- a/modules/10_ironmine_irm/app/views/irm/watchers/_sidebar_watcher_list.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/watchers/_sidebar_watcher_list.html.erb
@@ -1,4 +1,3 @@
-
 <% if allow_to_function?(:view_watcher) %>
     <% l_editable = allow_to_function?(:edit_watcher)%>
     <% (l_editable = editable && l_editable) if !editable.nil?%>
@@ -10,11 +9,9 @@
           <div class="sidebar-block-body">
             <% if l_editable %>
               <div class="form-inline">
-                  <%= lov_field_tag("watcher",Irm::Person, {:class=>"input-mini",:id => "watcher",:style=>"width:100px"}) %>
+                  <%= lov_field_tag("watcher",Irm::Person, {:class=>"input-mini",:id => "watcher",:style=>"width:90px;"}) %>
                   <%= hidden_field_tag "watchable_type", watchable.class.to_s%>
-                  <div style="float: right;">
-                    <%= link_submit t(:add),{:class=>"btn btn-primary"}%>
-                  </div>
+                  <%= link_submit t(:add),{:class=>"btn btn-primary"}%>
               </div>
             <% end %>
             <div class="form-inline">
