--- a/modules/10_ironmine_irm/app/views/irm/search/_box.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/search/_box.html.erb
@@ -1,3 +1,28 @@
+<% if ie6? %>
+  <%=form_tag({:controller=>"irm/search",:action=>"index"},{:id=>"phSearchForm"})  do |f| %>
+    <%= hidden_field_tag :search_option_str, "ALL Skm::EntryHeader Chm::ChangeRequest Icm::IncidentRequest Irm::Bulletin ALL Chm::ChangeRequest Icm::IncidentRequest Skm::EntryHeader Irm::Bulletin Irm::AttachmentVersion ", {:id => "searchOptionStr"} %>
+    <div id="phSearchContainer" class="headerSearchContainer">
+       <%= text_field_tag "q", t(:search_all),{:id=>"phSearchInput", :class => "grayTips headerSearchBoxGhostText headerSearchInput", :type => "text", :size => 20, :maxlength=>100}%>
+       <span class="search-btn" id="search-btn" title="<%= t(:search) %>"></span>
+    </div>
+  <% end %>
+  <script type="text/javascript">
+    $(function(){
+      $("#phSearchInput").focus(function(e){
+        if($(this).val() == "<%=t(:search_all)%>") $(this).val('');
+        $("#search-btn").addClass("search-btn-on");
+        $(this).blur(function(){
+          if($(this).val() == '') $(this).val("<%=t(:search_all)%>");
+          $("#search-btn").removeClass("search-btn-on");
+        });
+      });
+      $("#search-btn").click(function(e){
+        $("#phSearchForm").submit();
+      });
+    });
+  </script>
+<% else %>
+
 <%=form_tag({:controller=>"irm/search",:action=>"index"},{:id=>"phSearchForm"})  do |f| %>
   <%= hidden_field_tag :search_option_str, "ALL Skm::EntryHeader Chm::ChangeRequest Icm::IncidentRequest Irm::Bulletin ALL Chm::ChangeRequest Icm::IncidentRequest Skm::EntryHeader Irm::Bulletin Irm::AttachmentVersion ", {:id => "searchOptionStr"} %>
   <div id="phSearchContainer" class="headerSearchContainer">
@@ -162,3 +187,4 @@ function inputTipText(){
     })
 }
 </script>
+<% end %>
