--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/tabs.less
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/tabs.less
@@ -34,8 +34,7 @@
   color:#de4727;
   text-decoration:none;}
 .mx-tabs ul .active a,.mx-tabs ul .active a:hover{
-  background:#2bb1e0;
-  //background:#1797C0;
+  background:#1797C0;
   border-radius:2px 2px 0 0;
   color:#fff;
   font-weight:bold;
